tests/ui/stability-attribute/const-unstable-from-unmarked.stderr
error: `const_unstable::identity` is not yet stable as a const fn
  --> $DIR/const-unstable-from-unmarked.rs:14:5
   |
LL |     const_unstable::identity(x)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(const_identity)]` to the crate attributes to enable

error: aborting due to 1 previous error

